# game-wip

./: Cargo.toml
assets/: palette.aseprite
assets/shaders/: chunk.wgsl
src/: block.rs  chunk.rs  chunk_material.rs  egui_menu.rs  level.rs  level_generator.rs  main.rs  mesh_builder.rs  physics.rs  player.rs  voxel.rs
src/plugins/: asset_loader.rs
src/voxel/: block_pos.rs  chunk.rs  chunk_data.rs  chunk_index.rs  chunk_pos.rs
