[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_egui = "0.24.0"
derive_more = "0.99.17"
futures-lite = "2.1.0"
itertools = "0.12.0"
noise = "0.8.2"
num-derive = "0.4.1"
num-traits = "0.2.17"
parking_lot = "0.12.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[dependencies.bevy_xpbd_3d]
version = "0.3.2"
default-features = false
features = ["3d", "f64", "collider-from-mesh"]

[dependencies.big_space]
git = "https://github.com/austincummings/big_space"
branch = "xpbd-compat"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
